assets/prometheus-k8s/federate-route.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/description: Expose the `/federate` endpoint of the `prometheus-k8s` service via a router.
  labels:
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/part-of: openshift-monitoring
  name: prometheus-k8s-federate
  namespace: openshift-monitoring
spec:
  path: /federate
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: Reencrypt
  to:
    kind: Service
    name: prometheus-k8s
